[refactor] my homepage

--- a/index.html
+++ b/index.html
@@ -222,9 +222,11 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+ -->
 
 
 
@@ -232,8 +234,9 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
@@ -256,6 +259,7 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
     </header>
     <div id="content">
       <h4 id="updates">Updates&hellip;</h4>
+<p>(2025 May) Grateful to have 3 papers accepted to Interspeech conference!</p>
 <p>(2025 May) Grateful to have 2 papers accepted to ACL 2025 main conference!</p>
 <p>(2025 May) I was invited to give a research talk during my research visit to ISTI-CNR this month!</em></p>
 <p>(2025 Apr) I attended the Computing Research Association &ndash; Widening Participation conference (CRA-WP) in Denver.</p>
@@ -264,7 +268,7 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
 <p>(2024 Dec) I co-organized the AI winter school for highschool kids at MBZUAI.</p>
 <p>(2024 Dec) I attended the Arabic winter school in Riyadh!</p>
 <p>(2024 Aug) I hosted an alumni panel at MBZUAI to welcome the class of 2025.</p>
-<p>(2024 Aug) Excited to start my PhD at MBZUAI with Hanan Aldramaki🤍!</p>
+<p>(2024 Aug) Excited to start my PhD at MBZUAI with <a href="https://h-aldarmaki.github.io/">Hanan Aldramaki🤍</a>!</p>
 <p>(2024 Jul) I co-organized the AI summer school for highschool kids at MBZUAI.</p>
 
 <!-- <p>(2024 Nov) I presented LAML at Cold Spring Harbor Laboratory, at the Biological Data Science 2024 meeting, in the <em>Machine Learning</em> session. Also, I&rsquo;m now a PhD candidate!</p>
@@ -345,9 +349,11 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -355,8 +361,9 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
