--- a/projects/index.html
+++ b/projects/index.html
@@ -177,9 +177,11 @@
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -187,8 +189,9 @@
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
@@ -224,16 +227,16 @@
 </header>
 
   
-  <a href="/projects/shield-the-bay/" class="image featured">
+  <a href="" class="image featured">
     
-      <img src="https://theehawau.github.io/img/main/stb.jpg" alt="">
+      <img src="https://h-aldarmaki.github.io/assets/images/stutter.jpg" alt="">
     
   </a>
 
   <p>We aim to develop an AI-based system to automatically detect and assess stuttering severity. We aim to build and expand an annotated database of speech samples from people who stutter.</p>
   
   <footer>
-    <a href="/projects/shield-the-bay/" class="button big">Read more</a>
+    <!-- <a href="" class="button big">Read more</a> -->
     <ul class="stats">
   <li class="categories">
     <ul>
@@ -317,9 +320,11 @@
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -327,8 +332,9 @@
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
