--- a/publications/index.html
+++ b/publications/index.html
@@ -177,9 +177,11 @@
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -187,8 +189,9 @@
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
@@ -220,7 +223,7 @@
 </ol> -->
 <h3 id="conference-papers">Conference Papers</h3>
 <ol>
-<li>ArVoice: A Multi-Speaker Dataset for Arabic Speech Synthesis. <strong>HO Toyin*</strong>,RF Marew, H Alblooshi, S Magdy, H Aldarmaki</li>
+<li>ArVoice: A Multi-Speaker Dataset for Arabic Speech Synthesis. <strong>HO Toyin*</strong>,RF Marew, H Alblooshi, S Magdy, H Aldarmaki.  <em>Interspeech 2025</em></li>
 <li>Dialectal Coverage And Generalization in Arabic Speech Recognition. A Djanibekov*,<strong>HO Toyin*</strong>, R Alshalan, A Alitr, H Aldarmaki. <em>ACL 2025</em></li>
 <li>Where Are We? Evaluating LLM Performance on African Languages. I Adebara, <strong>HO Toyin</strong>, NT Ghebremichael, AR Elmadany, M Abdul-Mageed. <em>ACL 2025</em></li>
 <li>Infant Cry Detection Using Causal Temporal Representation. M Fu, D Li, ...,<strong>HO Toyin*</strong>, ..., H Aldarmaki. <em>ICASSP 2025</em> </li>
@@ -298,9 +301,11 @@
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -308,8 +313,9 @@
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
