--- a/resume/index.html
+++ b/resume/index.html
@@ -176,9 +176,11 @@
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -186,8 +188,9 @@
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+<!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
@@ -226,7 +229,7 @@
   <p>(Last updated May 16 2025).
 Resume in PDF form <a href="resume_16_05_2025.pdf">here</a>.</p>
   <footer>
-    <a href="/resume/resume/" class="button big">Read more</a>
+    <!-- <a href="/resume/resume/" class="button big">Read more</a> -->
     <ul class="stats">
   <li class="categories">
     <ul>
@@ -304,9 +307,11 @@ Resume in PDF form <a href="resume_16_05_2025.pdf">here</a>.</p>
 
 
 
-<li><a href="//instagram.com/gillian.chu" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
+<li><a href="//instagram.com/herwoww
+" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
@@ -314,8 +319,9 @@ Resume in PDF form <a href="resume_16_05_2025.pdf">here</a>.</p>
 
 
 <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&user=JrSN5G0AAAAJ" target="_blank" rel="noopener" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-<li><a href="//orcid.org/0000-0003-2205-730X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
-<li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li>
+<li><a href="https://orcid.org/0009-0008-3927-526X" target="_blank" rel="noopener" title="ORCID"><i class="ai ai-orcid"></i></a></li>
+ <!-- <li><a href="//researchgate.net/profile/Gillian-Chu-2" target="_blank" rel="noopener" title="Research Gate"><i class="ai ai-researchgate"></i></a></li> -->
+
 
 
 <li><a href="mailto:hawau.toyin@mbzuai.ac.ae" target="_blank" title="Email" class="far fa-envelope"></a></li>
