--- a/about/index.html
+++ b/about/index.html
@@ -227,7 +227,7 @@
 <hr>
 <h2 id="education--fellowships">Education &amp; Research Visits</h2>
 <p>Generously supported by MBZUAI, ITSERR-TNA and Hanan Aldramaki🤍.</p>
-<p>Visiting Researher at ISTI-CNR, Pisa (2025).</p>
+<p>Visiting Researcher at ISTI-CNR, Pisa (2025).</p>
 <ul>
 <li>PhD Natural Language Processing from MBZUAI (Exp. 2028)</li>
 <li>M.Sc. Program in Machine Learning from MBZUAI 2024</li>
