--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@ long run. Thanks for using the theme, and feel free to submit issues as needed.<
 <li><a href="//instagram.com/herwoww
 " target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<!-- <!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
- -->
+<!-- <li><a href="//twitter.com/gillianychu" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li> -->
+
 
 
 
